client-side synchronization
PCL files update - synchronize with the up-to-date client files

--- a/client/PCL/PCL/Setup.ini
+++ b/client/PCL/PCL/Setup.ini
@@ -1,6 +1,7 @@
-
-
 UiHiddenOtherHelp:False
 LaunchFolderSelect:$.minecraft\
 LaunchVersionSelect:1.12.2
 LoginPageType:0
+LaunchArgumentIndieV2:0
+WindowHeight:550
+WindowWidth:900
