--- a/client/PCL/.minecraft/versions/1.12.2/PCL/Setup.ini
+++ b/client/PCL/.minecraft/versions/1.12.2/PCL/Setup.ini
@@ -1,27 +1,15 @@
-
-
 VersionArgumentIndie:0
-
 State:6
-
 Info:1.12.2, Forge 14.23.5.2859
-
-Logo:pack://application:,,,/images/Blocks/Anvil.png
-
-ReleaseTime:2017-09-18 02:39:46
-
+Logo:pack://application:,,,/Plain Craft Launcher 2;component/Images/Blocks/Anvil.png
+ReleaseTime:2017-09-18 02:39
 VersionFabric:
-
 VersionOptiFine:
-
 VersionLiteLoader:False
-
 VersionForge:14.23.5.2859
-
 VersionApiCode:14232859
-
 VersionOriginal:1.12.2
-
 VersionOriginalMain:12
-
 VersionOriginalSub:2
+VersionNeoForge:
+VersionArgumentIndieV2:False
